# basic-web-tts

./: .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  REVENUECAT_SETUP.md  build.js  copy-assets.js  disco.json  download_models.py  netlify.toml  package.json  pyproject.toml  requirements.txt  setup.py  start.sh  test_models.py  upload_custom_models.py  upload_marcus_model.py
docs/: CNAME  index.html
src/piper_tts_web/: __init__.py  __main__.py  server.py
src/piper_tts_web/models/: en_GB-alan-medium.onnx.json  en_GB-jenny_dioco-medium.onnx.json  en_US-amy-medium.onnx.json  en_US-kathleen-low.onnx.json  en_us-marcus.onnx
src/piper_tts_web/static/: about.html  app.js  dashboard.html  dashboard.js  index.html  library.html  library.js  privacy.html  styles.css  terms.html
