[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-tts-web"
version = "0.1.0"
description = "A web interface for Piper Text-to-Speech"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "gunicorn>=21.2.0",
    "firebase-admin>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["piper_tts_web"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$' 